# baleine

./: .env  .gitignore  Cargo.toml  README.md  args.yaml  baleine.example.conf  changelog.txt  config.toml  r2dock.conf  r2dock.example.conf  sonar-project.properties
.github/workflows/: docker.yml  shiftleft-analysis.yml  versioning.yml
img/: faraday.drawio
python-tutorials/: A1-ping.py  A3-ping.py  A4-ping.py  A5-ping.py  requirements.txt
setup_files/: .profile  build_and_install.sh  r2  setup_node.sh
setup_files/gateway/: .env  baleine.example.conf  build_and_install.sh  docker-compose.yml
setup_files/nodes/: rdsh  setup_node.sh  ssh_config
setup_files/tutos/: Dockerfile
src/: args.rs  args.yaml  build.rs  deploy.rs  destroy.rs  list.rs  main.rs  save.rs  utils.rs
