[package]
name = "r2dock"
version = "0.1.0"
authors = ["Téo Haÿs <teo.hays@protonmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "*", features = ["yaml", "derive", "unicode"]}
dotenv = "*"
reqwest = {version = "*", features = ["blocking", "json"]}
json = "*"
num_cpus = "*"
crossbeam = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tungstenite = { version = "*", features = ["native-tls"] }
url = "*"
openssl = { version = "0.10"}
regex = "*"