[package]
name = "r2dock"
version = "0.3.0"
authors = ["Téo Haÿs"]
edition = "2018"

[dependencies]
# clap is used for argument parsing
clap = {version = "*", features = ["derive", "unicode"]}
# dotenv is used to load parameters from files or environment variables
dotenv = "*"
# reqwest is used to call the Docker Registry API to get a list of images
reqwest = {version = "*", features = ["blocking", "json"]}
# json is used to parse the Docker API Json responses
json = "*"
# crossbeam is used to enable multi-threading when sending SSH commands
crossbeam = "*"