[package]
name = "baleine"
version = "0.5.0"
authors = ["Téo Haÿs"]
edition = "2018"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
strip = true

[dependencies]
# clap is used for argument parsing
clap = {version = "*", features = ["derive", "unicode", "cargo"]}
# dotenv is used to load parameters from files or environment variables
dotenv = "*"
# reqwest is used to call the Docker Registry API to get a list of images
reqwest = {version = "*", features = ["blocking", "json"]}
# json is used to parse the Docker API Json responses
json = "*"
# crossbeam is used to enable multi-threading when sending SSH commands
crossbeam = "*"
# url is used in the build feature to check if we provide a URL or a file path
url = "*"
# tempfile
tempfile = "*"